--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -5,8 +5,8 @@
   <div class="col-2"></div>
   <% if user.id == current_user.id %>
     <div class="col-5">
-      <%= link_to 'プロフィールの編集', edit_user_path(user.id), class: 'btn new-btn d-none d-lg-block' %>
-      <%= link_to '', edit_user_path(user.id), class: 'all-btn fas fa-user-edit fa-2x d-lg-none' %>
+      <%= link_to 'プロフィールの編集', edit_user_path(user.id), class: 'btn new-btn d-none d-lg-block', data: {"turbolinks": false} %>
+      <%= link_to '', edit_user_path(user.id), class: 'all-btn fas fa-user-edit fa-2x d-lg-none', data: {"turbolinks": false} %>
     </div>
   <% else %>
     <div class="col-5">
