--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -42,25 +42,28 @@ video {
     min-height: 100%;
     min-width: 100%;
 }
-#image-area{
-    position: fixed;
-    z-index: -1;/*最背面に設定*/
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    overflow: hidden;
-}
-// 背景画像
-#bg-image {
-    /*天地中央配置*/
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 100vh;
-    // min-height: 100%;
-    // min-width: 100%;
-}
+
+// 実装模索中
+// #image-area{
+//     position: fixed;
+//     z-index: -1;/*最背面に設定*/
+//     top: 0;
+//     right: 0;
+//     left: 0;
+//     bottom: 0;
+//     overflow: hidden;
+// }
+// // 背景画像
+// #bg-image {
+//     /*天地中央配置*/
+//     position: absolute;
+//     z-index: -1;
+//     width: 100%;
+//     height: 100vh;
+//     // min-height: 100%;
+//     // min-width: 100%;
+// }
+
 #header{
     position: relative;/*h1の中央寄せ配置の起点とするためのrelative*/
     height: 100vh;/*高さを全画面にあわせる*/
